# django-cookiecutter

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.dir_name}}/: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  taskfile.yml
{{cookiecutter.dir_name}}/.github/workflows/: pre-commit.yml
{{cookiecutter.dir_name}}/backend/: env.py  requirements.txt
{{cookiecutter.dir_name}}/backend/project/: env.py  settings.py
