[project]
name = "{{ cookiecutter.github_repo }}"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "Django",
    "django-types",
    "django-stubs-ext",
    "gunicorn",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "whitenoise",
]

[project.optional-dependencies]
pre-commit = ["pre-commit"]

[tool.ruff]
src = ["./backend"]
exclude = ["./backend/**/migrations/"]

[tool.ruff.lint]
select = ["I"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
executionEnvironments = [{ root = "./backend" }]
include = ["./backend"]
exclude = ["./.venv", "**/migrations"]
